--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         
-        <script type="text/javascript" src="js/raphael.js"></script>
-        <script type="text/javascript" src="js/jquery-1.9.0.js"></script>
+        <!--script type="text/javascript" src="js/raphael.js"></script-->
+        <!--script type="text/javascript" src="js/jquery-1.9.0.js"></script-->
+        
+        <script type="text/javascript" src="js/asm.js"></script>
+        <script type="text/javascript" src="js/synthesis.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body>
