--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         
-        <!--script type="text/javascript" src="js/raphael.js"></script-->
+        <script type="text/javascript" src="js/raphael.js"></script>
         <!--script type="text/javascript" src="js/jquery-1.9.0.js"></script-->
         
-        <script type="text/javascript" src="js/asm.js"></script>
-        <script type="text/javascript" src="js/synthesis.js"></script>
+        <script type="text/javascript" src="js/src/pm.js"></script>
+        <script type="text/javascript" src="js/src/asm.js"></script>
+        <script type="text/javascript" src="js/src/face.js"></script>
+        <script type="text/javascript" src="js/src/synthesis.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body>
-        <div id="controlPanel">
+        <!--div id="controlPanel">
             <div id="addPoint" class="button">
                 Add Point
             </div>
             <div id="movePoint" class="button">
                 Move Point
             </div>
-        </div>
+        </div-->
     </body>
 </html>
