Draw face with lines

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         
         <script type="text/javascript" src="js/src/pm.js"></script>
         <script type="text/javascript" src="js/src/asm.js"></script>
+        <script type="text/javascript" src="js/src/vertex.js"></script>
+        <script type="text/javascript" src="js/src/edge.js"></script>
         <script type="text/javascript" src="js/src/face.js"></script>
         <script type="text/javascript" src="js/src/synthesis.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
